Fixed issue: scroll the website to view the folders on iOS devices

--- a/src/styles/PublicationsModal.scss
+++ b/src/styles/PublicationsModal.scss
@@ -9,7 +9,7 @@
 
   @media only screen and (max-width: 900px) {
     .modal-body {
-      max-height: 65vh;
+      max-height: 60vh;
     }
   }
 }
